...
    <string name="description_not_liked">Not liked</string>


    <!-- Plant Info Screen -->
    <string name="image_plant_description">Image of the plant</string>
    <string name="watering_frequency_header">Watering frequency</string>
    <string name="watering_frequency_value">Every %1$d days</string>
    <string name="last_time_watered_header_plant_info">Last watered</string>
    <string name="status_label">Status: %1$s</string>
    <string name="tab_health">Health</string>
    <string name="loading_plant_infos">Loading Plant Infos…</string>
    <string name="error_failed_load_plant_info">Failed to load plant</string>
    <string name="tips_button_label">Tips</string>
    <string name="tips_loading_message">Loading…</string>
    <string name="tips_title">Care Tips</string>
...
