package com.android.mygarden.ui.navigation

object NavigationTestTags {
  const val TOP_BAR = "TopBar"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val TOP_BAR_NAV_BACK_BUTTON = "TopBarNavBackButton"
  const val TOP_BAR_SIGN_OUT_BUTTON = "TopBarSignOutButton"
  const val BOTTOM_BAR = "BottomBar"
  const val CAMERA_BUTTON = "CameraButton"
  const val GARDEN_BUTTON = "GardenButton"
  const val FEED_BUTTON = "FeedButton"
  const val CAMERA_SCREEN = "CameraScreen"
...
